--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ build/
 application.properties
 application.yml
 /src/main/resources/properties/env.properties
+/src/main/resources/application-db.yml
